# telco-churn-molps

./: .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-lock.txt  requirements-notebook.in  requirements.in  requirements.txt
.github/workflows/: ci.yml
src/mlops_tutorial/: config.py  data_ingestion.py
tests/: test_project_setup.py
