[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn-mlops"
version = "0.1.0"
description = "An end-to-end MLOps project for predicting customer churn."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88