[project]
name = "telco-churn-mlops"
version = "0.1.0"
description = "A beginner-friendly MLOps project using the Telco Customer Churn dataset."
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]